--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       Loading...
     </app>
 
-    <!-- Google Analytics: change UA-71073175-2 to be your site's ID -->
+    <!-- Google Analytics: change UA-71073175-2 to be your site's ID
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,6 +25,6 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-71073175-2', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script> -->
   </body>
 </html>
